# sp1-tx-preconf-slashing

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain
.github/workflows/: foundry-test.yml  network-proof-e2e.yml  prove.yml
contracts/: .env.example  DEPLOYMENT.md  README.md  deploy-and-verify.sh  deployment.env  foundry.toml
contracts/demo/: README.md  REAL_TIME_PROVING_SETUP.md  package-lock.json  package.json
contracts/demo/backend/: package-lock.json  package.json  server.js
contracts/demo/public/: index.html
contracts/demo/src/: App.js  contracts.js  index.css
contracts/demo/src/components/: ProposerTab.js  UserTab.js
contracts/demo/src/hooks/: useWallet.js
contracts/demo/src/utils/: eip712.js  ethereum.js  proofGeneration.js
contracts/script/: DeployTransactionInclusionVerifier.s.sol  DeployTxInclusionPreciseSlasher.s.sol  DeploymentEnvReader.sol  RegisterCanonicalBlock.s.sol  VerifyProofOnchain.s.sol
contracts/src/: TransactionInclusionVerifier.sol  TxInclusionPreciseSlasher.sol
contracts/src/fixtures/: README.md  groth16-fixture-for-tests.json  groth16-fixture.json  plonk-fixture.json
contracts/test/: GeneratedFixtureE2E.t.sol  TransactionInclusionVerifier.t.sol  TxInclusionPreciseSlasher.t.sol
docs/: PRODUCTION_GAPS.md  SLASHER_DESIGN_REVIEW.md
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  SUCCINCT_PROVER_NETWORK_INTEGRATION.md
script/src/: lib.rs
scripts/: run_generated_fixture_e2e.sh
