[package]
name = "tx-inclusion-precise-index-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# alloy dependencies needed by the lib
alloy = "0.14.0"
alloy-consensus = { version = "0.14.0", features = ["serde", "serde-bincode-compat"] }
alloy-primitives = { version = "1.0.0", features = ["serde"] }
alloy-rpc-types = { version = "0.14.0", features = ["eth"] }
alloy-rlp = "0.3.11"
alloy-trie = "0.8.1"
alloy-eips = "0.14.0"

# serialization
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_with = "3.12.0"

# error handling
eyre = "0.6.12"
