[package]
name = "tx-inclusion-precise-index-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# alloy dependencies needed by the lib
alloy = "2.0.1"
alloy-consensus = { version = "2.0.1", features = ["serde", "serde-bincode-compat"] }
alloy-primitives = { version = "1.5.7", features = ["serde"] }
alloy-rpc-types = { version = "2.0.1", features = ["eth"] }
alloy-rlp = "0.3.15"
alloy-trie = "0.9.5"
alloy-eips = "2.0.1"
alloy-sol-types = { workspace = true, optional = true }

# serialization
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_with = "3.12.0"

# error handling
eyre = "0.6.12"

[features]
default = []
sol-types = ["alloy-sol-types"]
