[package]
name = "tx-inclusion-precise-index-client"
description = "SP1 program for proving transaction inclusion at a precise index in Ethereum blocks"
edition = "2021"

[dependencies]
# alloy
alloy-primitives = { version = "1.0.0", features = ["serde"] }
alloy-consensus = { version = "0.14.0", features = ["serde", "serde-bincode-compat"] }
alloy-rlp = "0.3.11"
alloy-trie = "0.8.1"
alloy-sol-types = { workspace = true }

# sp1
sp1-zkvm = "5.0.8"


# misc
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12.0"