[package]
version = "0.1.0"
name = "tx-inclusion-precise-index"
edition = "2021"
default-run = "local"

[[bin]]
name = "local"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
# alloy - only what's needed for the CLI
alloy = "0.14.0"
alloy-provider = { version = "0.14.0", features = ["reqwest"] }
alloy-rpc-types = { version = "0.14.0", features = ["eth"] }

# misc - CLI specific
url = "2.5.4"
tokio = { version = "1.44.2", default-features = false, features = ["rt", "rt-multi-thread"] }
eyre = "0.6.12"
bincode = "1.3.3"
dotenv = "0.15.0"
clap = { version = "4.0", features = ["derive"] }

# sp1
sp1-sdk = "5.2.1"

# lib
tx-inclusion-precise-index-lib = { path = "../lib" }

[build-dependencies]
sp1-build = "5.0.0"
